--- a/preview.themeforest.net/item/yacher-yacht-charter-services-html-template/full_screen_preview/28863365238f.html
+++ b/preview.themeforest.net/item/yacher-yacht-charter-services-html-template/full_screen_preview/28863365238f.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="no-js">
   
-<!-- Mirrored from preview.themeforest.net/item/yacher-yacht-charter-services-html-template/full_screen_preview/28863365?_ga=2.220178329.1868758478.1664543099-105977076.1664543099&_gac=1.188829145.1664543099.CjwKCAjwp9qZBhBkEiwAsYFsb7l9myS9Nmb_-B_NZb2PBlyuQIIVDStAKDFnFrs0XUXMI9e2D13QyBoCieIQAvD_BwE by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 30 Sep 2022 13:11:07 GMT -->
+<!-- Mirrored from preview.themeforest.net/item/yacher-yacht-charter-services-html-template/full_screen_preview/28863365?_ga=2.220178329.1868758478.1664543099-105977076.1664543099&_gac=1.188829145.1664543099.CjwKCAjwp9qZBhBkEiwAsYFsb7l9myS9Nmb_-B_NZb2PBlyuQIIVDStAKDFnFrs0XUXMI9e2D13QyBoCieIQAvD_BwE by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 30 Sep 2022 13:45:36 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8">
@@ -24,9 +24,9 @@
   <link rel="apple-touch-icon-precomposed" type="image/x-icon" href="https://public-assets.envato-static.com/icons/themeforest.net/apple-touch-icon-144x144-precomposed.png" sizes="144x144" />
 <link rel="apple-touch-icon-precomposed" type="image/x-icon" href="https://public-assets.envato-static.com/icons/themeforest.net/apple-touch-icon-precomposed.png" />
 
-    <script src="https://public-assets.envato-static.com/assets/market/pages/full_screen_preview/index-39fc94f50438714d8467e6c5e21895674c1ed3fb42ecf0bbda67669a448ef91e.js" nonce="HVVIErTb0E3rpAkQ8A3U3A=="></script>
+    <script src="https://public-assets.envato-static.com/assets/market/pages/full_screen_preview/index-39fc94f50438714d8467e6c5e21895674c1ed3fb42ecf0bbda67669a448ef91e.js" nonce="rBgtLJ7i0lknV3WMJdh0XA=="></script>
 
-    <script nonce="HVVIErTb0E3rpAkQ8A3U3A==">
+    <script nonce="rBgtLJ7i0lknV3WMJdh0XA==">
 //<![CDATA[
       //function to fix height of iframe!
       var calcHeight = function() {
@@ -49,7 +49,7 @@
     
   </head>
   <body class="full-screen-preview">
-    <!-- <div class="preview__header" data-view="ctaHeader" data-item-id="28863365">
+    <div class="preview__header" data-view="ctaHeader" data-item-id="28863365">
   <div class="preview__envato-logo">
     <a class="header-envato_market" href="https://themeforest.net/item/yacher-yacht-charter-services-html-template/28863365">Envato Market</a>
   </div>
@@ -59,12 +59,12 @@
     <a class="header-buy-now e-btn--3d -color-primary" href="https://themeforest.net/checkout/from_item/28863365?license=regular&amp;support=bundle_6month">Buy now</a>
   </div>
 </div>
-</div> -->
+</div>
 <iframe class="full-screen-preview__frame" src="http://html.tonatheme.com/2020/Yacher/" name="preview-frame" frameborder="0" noresize="noresize" data-view="fullScreenPreview" allow="geolocation 'self'; autoplay 'self'">
 </iframe>
 
 
-    <script nonce="HVVIErTb0E3rpAkQ8A3U3A==">
+    <script nonce="rBgtLJ7i0lknV3WMJdh0XA==">
 //<![CDATA[
       $(function(){viewloader.execute(Views);});
 
@@ -73,10 +73,10 @@
     
 <div id="affiliate-tracker" class="is-hidden" data-view="affiliatesTracker" data-cookiebot-enabled="true"></div>
 
-      <script src="https://consent.cookiebot.com/uc.js" data-cbid="4a6af4ea-f614-41d8-b0a9-8bb6d7fe4799" async="async" id="Cookiebot" nonce="HVVIErTb0E3rpAkQ8A3U3A=="></script>
+      <script src="https://consent.cookiebot.com/uc.js" data-cbid="4a6af4ea-f614-41d8-b0a9-8bb6d7fe4799" async="async" id="Cookiebot" nonce="rBgtLJ7i0lknV3WMJdh0XA=="></script>
 
 
-  <script nonce="HVVIErTb0E3rpAkQ8A3U3A==">
+  <script nonce="rBgtLJ7i0lknV3WMJdh0XA==">
 //<![CDATA[
   var ACCOUNTS = ["m"];
   window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -460,11 +460,11 @@
 
 //]]>
 </script>
-<script src="https://public-assets.envato-static.com/assets/market/core/standardised_google_analytics_helpers-2b8a6fa27e72433b3f73ec0da6207cd6ba4198dcef039d50f0c7af222f3d8c30.js" nonce="HVVIErTb0E3rpAkQ8A3U3A=="></script>
+<script src="https://public-assets.envato-static.com/assets/market/core/standardised_google_analytics_helpers-2b8a6fa27e72433b3f73ec0da6207cd6ba4198dcef039d50f0c7af222f3d8c30.js" nonce="rBgtLJ7i0lknV3WMJdh0XA=="></script>
 
 
   
-<script nonce="HVVIErTb0E3rpAkQ8A3U3A==">
+<script nonce="rBgtLJ7i0lknV3WMJdh0XA==">
 //<![CDATA[
 
     if (typeof Cookiebot !== 'undefined' && Cookiebot.consent && Cookiebot.consent.statistics ) {
@@ -675,7 +675,7 @@
 
 
 
-<script nonce="HVVIErTb0E3rpAkQ8A3U3A==">
+<script nonce="rBgtLJ7i0lknV3WMJdh0XA==">
 //<![CDATA[
   // Set Datadog custom attributes
   (function () {
@@ -691,7 +691,7 @@
 //]]>
 </script>
 
-  <script nonce="HVVIErTb0E3rpAkQ8A3U3A==">
+  <script nonce="rBgtLJ7i0lknV3WMJdh0XA==">
 //<![CDATA[
     if (typeof Cookiebot !== 'undefined' && Cookiebot.consent && Cookiebot.consent.marketing) {
       enableGoogleTagManager();
@@ -728,5 +728,5 @@
 
 
 </body>
-<!-- Mirrored from preview.themeforest.net/item/yacher-yacht-charter-services-html-template/full_screen_preview/28863365?_ga=2.220178329.1868758478.1664543099-105977076.1664543099&_gac=1.188829145.1664543099.CjwKCAjwp9qZBhBkEiwAsYFsb7l9myS9Nmb_-B_NZb2PBlyuQIIVDStAKDFnFrs0XUXMI9e2D13QyBoCieIQAvD_BwE by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 30 Sep 2022 13:11:08 GMT -->
+<!-- Mirrored from preview.themeforest.net/item/yacher-yacht-charter-services-html-template/full_screen_preview/28863365?_ga=2.220178329.1868758478.1664543099-105977076.1664543099&_gac=1.188829145.1664543099.CjwKCAjwp9qZBhBkEiwAsYFsb7l9myS9Nmb_-B_NZb2PBlyuQIIVDStAKDFnFrs0XUXMI9e2D13QyBoCieIQAvD_BwE by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 30 Sep 2022 13:45:37 GMT -->
 </html>
